--- a/[Bài tập] Luyện tập mảng 01/Bai_4.html
+++ b/[Bài tập] Luyện tập mảng 01/Bai_4.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bai_4</title>
 </head>
 <body>
-
+<script>
+    let arr = [];
+    let aLength = +prompt("Nhập độ dài mảng:");
+    for (let i = 0; i < aLength; i++){
+        arr[i] = +prompt("Nhập số nguyên bất kì để lưu vào phần tử " + i + " của mảng:");
+    }
+    arr.reverse();
+    document.write(arr);
+</script>
 </body>
 </html>
