--- a/[Bài tập] Luyện tập mảng 02/Bai_5.html
+++ b/[Bài tập] Luyện tập mảng 02/Bai_5.html
@@ -5,6 +5,16 @@
     <title>Bai_5</title>
 </head>
 <body>
-
+<script>
+    let a = prompt('Nhập chuỗi a');
+    let b = prompt('Nhập chuỗi b');
+    let result = 'Chuỗi a và b ';
+    if (a === b){
+        result += 'giống nhau';
+    }
+    else
+        result += 'không giống nhau';
+    alert(result);
+</script>
 </body>
 </html>
