--- a/[Bài tập] Luyện tập mảng 01/Bai_5.html
+++ b/[Bài tập] Luyện tập mảng 01/Bai_5.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bai_5</title>
 </head>
 <body>
+<script>
+    let arr = [];
+    let aLength = +prompt("Nhập độ dài mảng:");
+    for (let i = 0; i < aLength; i++){
+        arr[i] = +prompt("Nhập số nguyên bất kì để lưu vào phần tử " + i + " của mảng:");
+    }
 
+    let result = 0;
+    for (let i of arr){
+        if(i < 0){
+            result++;
+        }
+    }
+
+    alert("Chuỗi có " + result + " số nguyên âm")
+</script>
 </body>
 </html>
