--- a/[Bài tập] Luyện tập mảng 01/Bai_9.html
+++ b/[Bài tập] Luyện tập mảng 01/Bai_9.html
@@ -5,6 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-
+<script>
+    let a = [], b = [], c = [];
+    for (let i = 0; i < 10; i++){
+        a[i] = +prompt("Nhập số nguyên bất kì để lưu vào phần tử " + i + " của mảng a");
+    }
+    for (let i = 0; i < 10; i++){
+        b[i] = +prompt("Nhập số nguyên bất kì để lưu vào phần tử " + i + " của mảng b");
+    }
+    alert(c = a.concat(b));
+</script>
 </body>
 </html>
