--- a/[Bài tập] Luyện tập mảng 02/Bai_3.html
+++ b/[Bài tập] Luyện tập mảng 02/Bai_3.html
@@ -5,6 +5,19 @@
     <title>Bai_3</title>
 </head>
 <body>
-
+<script>
+    let arr = [];
+    let aLength = +prompt("Nhập độ dài mảng:");
+    let result = 0;
+    for (let i = 0; i < aLength; i++){
+        arr[i] = prompt("Nhập ký tự bất kì để lưu vào phần tử " + i + " của mảng:");
+    }
+    for (let i of arr){
+        if (!isNaN(i)){
+            result++;
+        }
+    }
+    alert("Mảng [" + arr + "] gồm " + result + " ký tự số!");
+</script>
 </body>
 </html>
