--- a/[Bài tập] Luyện tập mảng 02/Bai_4.html
+++ b/[Bài tập] Luyện tập mảng 02/Bai_4.html
@@ -5,6 +5,18 @@
     <title>Bai_4</title>
 </head>
 <body>
-
+<script>
+    let str = prompt("Nhập một chuỗi để đếm số lượng ký tự:");
+    let count = 0;
+    if (str[0] != " ") {
+        count =1;
+    }
+    for (let i = 0; i < str.length-1; i++) {
+        if ((str[i] === " ") && (str[i+1] !== " ") ) {
+            count ++;
+        }
+    }
+    alert("Chuỗi có chứa " + count + " từ");
+</script>
 </body>
 </html>
